# superboxconfig

./: .gitignore  LICENSE  README.md  client-pyodide.js  index.html  pyproject.toml  requirements.txt
data/: accessories.json  breakers.json  superbox.json  xspace.json
examples/: spec_accessories.yaml  spec_mcb_750kcmil_refuse.yaml  spec_mlo_nema1.yaml
superbox_bom/: __init__.py  catalog.py  cli.py  engine.py  errors.py
tests/: conftest.py  test_accessories.py  test_assemble_bom.py  test_branches_teyfba2.py  test_group_xt1.py  test_pack_two_sided.py  test_refuse.py  test_xspace.py
webapp/: app.py
webapp/static/: app.js  index.html  style.css
